--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
+    "@angular/animations": "^17.0.4",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
@@ -19,10 +19,15 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "angular-toastr": "^2.1.1",
+    "bootstrap": "^5.3.2",
     "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "schematics-scss-migrate": "^2.3.17",
+    "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
